[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/themes/default.theme" type="Theme" id=1]
[ext_resource path="res://assets/themes/window_background2.tres" type="Texture" id=2]
[ext_resource path="res://scenes/ui/ChatBox/ChatBox.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/ChatBox/ChannelSelector.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/components/Draggable/Draggable.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/components/Resizeable/Resizeable.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Arial_12.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/fonts/Arial_14.tres" type="DynamicFont" id=8]

[node name="ChatBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 50 )
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1014.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Tabs" parent="MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 43.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TabContainer/General"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[bold] dff [/bold]"
text = "[bold] dff [/bold]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Local" type="Tabs" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 43.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TabContainer/Local"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = ExtResource( 7 )
text = "World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="+" type="Button" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 43.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 1014.0
margin_bottom = 560.0
focus_mode = 2
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 564.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="ChannelSelector" type="MenuButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 8 )
toggle_mode = false
flat = false
items = [ "Local", null, 0, true, false, 0, 0, null, "", false, "Faction", null, 0, false, false, 1, 0, null, "", false, "Global", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 4 )

[node name="MessageLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 932.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 8 )

[node name="SendButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 936.0
margin_right = 986.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 8 )
text = "Send"

[node name="Resizable" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 990.0
margin_right = 1014.0
margin_bottom = 26.0
target_path = NodePath("../../../..")

[node name="Draggable" parent="." instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_right = 0.0
target_path = NodePath("..")

[connection signal="channel_changed" from="MarginContainer/VBoxContainer/HBoxContainer/ChannelSelector" to="." method="change_channel"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SendButton" to="." method="_on_SendButton_pressed"]
